# ROKAE_Control_Interface

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  README_CN.md  automake.sh  quick_start.md  xmate.ini
data/: README.md
data/joint_force_log/: 2023-07-18_23-17.txt  2023-07-18_23-30.txt  2023-07-18_23-34.txt
data/optimal_trajectory/: opt_x.txt  opt_x_initial0o1.mat  opt_x_initial0o1.txt  opt_x_initial0o5.mat  opt_x_initial1.mat  opt_x_initial1.txt
examples/: .cartesian_impedance_move.cpp.swp  .cartesian_position_move.cpp.swp  CMakeLists.txt  cartesian_impedance_move.cpp  cartesian_nullspace_move.cpp  cartesian_position_move.cpp  cartesian_position_move_xmate7.cpp  cartesian_rotation_move.cpp  cartesian_s_line_mu.cpp  drag_test.cpp  joint_impedance_move.cpp  joint_s_mu.cpp  torque_control.cpp
inc/constant_jointspace_impedance/: rtwtypes.h  torque_from_regression_matrix.h
inc/include/: cart_motion.h  control_tools.h  control_types.h  duration.h  errors.h  ini.h  joint_motion.h  load_calculations.h  log.h  logger.h  lowpass_filter.h  model.h  move.h  print_rci.h  rate_limiting.h  robot.h  velocity_control.h  xmate_exception.h
inc/optimal_excitation_trajectory/: excitation_trajectory_tools.h
inc/rci_data/: command_traits.h  command_types.h  error.h  platform.h  robot_datas.h
script/: release-build.sh
src/: CMakeLists.txt  README.md  constant_jointSpace_impedance.cpp  ea_admittance_control.cpp  excitation_trajectory.cpp  excitation_trajectory_tools.cpp
src/utils/: excitation_trajectory_tools.cpp  torque_from_regression_matrix.cpp
